fix(toujou): Move the solr resulst card collection alignment styles to the correct selector

--- a/src/styles/elements/_solr-results.css
+++ b/src/styles/elements/_solr-results.css
@@ -3,8 +3,11 @@
     --card-collection-width: 100%;
 }
 
-.solr[view-mode="map"] .solr-results__card-collection {
+.solr-results__card-collection {
     --card-collection-justify-content: flex-start;
+}
+
+.solr[view-mode="map"] .solr-results__card-collection {
     --card-collection-display: none;
 }
 
